:art: style: metadata 수정

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MS Portfolio</title>
+    <meta name="description" content="장민수의 포트폴리오입니다." />
   </head>
   <body>
   <!-- Google Tag Manager (noscript) -->
