:art: style: metadata 수정

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MS Portfolio</title>
     <meta name="description" content="장민수의 포트폴리오입니다." />
+    <meta name="keywords" content="장민수, 포트폴리오, 개발자, 프론트엔드" />
+    <meta name="author" content="장민수" />
   </head>
   <body>
   <!-- Google Tag Manager (noscript) -->
